FlexDeploy 8.0/_fdtlt84/objects/FlexDeploy_8__c.object
<CustomObject>
    <fields>
        <fullName>Master_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FlexDeploy 8</relationshipLabel>
        <relationshipName>FlexDeploy_8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <label>Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token_ID__c</fullName>
        <displayFormat>FD{MM}{YY}{0}</displayFormat>
        <label>Token ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>FlexDeploy 8</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FD_Queue_FlexDeploy_8</fullName>
        <filterScope>Queue</filterScope>
        <label>FD Queue</label>
        <queue>FD_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RPCMT_2_FlexDeploy_8</fullName>
        <filterScope>Queue</filterScope>
        <label>RPCMT - 2</label>
        <queue>RPCMT_2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FD88-{0}</displayFormat>
        <label>FlexDeploy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FlexDeploy 8</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CreatedDateVL</fullName>
        <active>true</active>
        <errorConditionFormula>CreatedDate &gt; NOW()</errorConditionFormula>
        <errorMessage>Test Error Message</errorMessage>
    </validationRules>
</CustomObject>